# exomind-model

./: .gitignore  CLAUDE.md  PRODUCT.md  README.md  agent.md  pyproject.toml  requirements.txt  run.sh  voice_ime.py
.claude/: ralph-loop.local.md
asr/: __init__.py  base.py  factory.py  funasr_client.py  moss_client.py  nano_client.py  result.py  selector.py
config/: __init__.py  config.py
deploy/: exomind-model.service  voice-ime.service
docs/: PRD.md  README.md  moss-api.md
engine/: __init__.py
memory/: long-term.md
pm/: PRD.md  RALPH_LOOP_STOP_HOOK.md  agent.md  fun-cosyvoice3-debug.md  input.md  tasks_plan.md
privacy_gateway/: README.md  __init__.py  config.py  main.py
service/: __init__.py  config.py  main.py
speaker/: __init__.py  base.py  camplus_client.py  factory.py
specs/: spec-001-config.md  spec-002-tts-architecture.md  spec-004-logging-architecture.md  spec-005-speaker-recognition.md  spec-006-asr-diarization.md  spec-007-asr-output-formats.md  spec-008-asr-streaming.md  spec-009-engine-selector.md  spec-010-cli-smart.md  spec-011-sensevoice.md  spec-020-local-service.md  spec-020a-tech-discussion.md  spec-020b-fastapi-service-api.md  spec-020c-privacy-gateway.md
tests/: __init__.py  conftest.py  test_api.py  test_asr_diarization.py  test_asr_output_formats.py  test_asr_streaming.py  test_cli_smart.py  test_config.py  test_config_integration.py  test_engine_api.py  test_engine_manager.py  test_engine_selector.py  test_log.py  test_models.py  test_privacy_gateway.py  test_sensevoice_cleaning.py  test_speaker.py  test_speaker_api.py  test_tts.py  (+1 more)
tts/: base.py  (+5 more)
(+21 files in other folders)
