[project]
name = "exomind-model"
version = "1.0.0"
description = "VoiceIME - 语音输入工具，支持全局快捷键录音和云端 ASR API"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "XiaoHe", email = "xiaohe@example.com" }
]
license = { text = "MIT" }

dependencies = [
    "requests>=2.28.0",
    "sounddevice>=0.4.0",
    "numpy>=1.20.0",
    "keyboard>=0.13.0",
    "python-dotenv>=1.0.0",
    "pyperclip>=1.8.0",
    "pyautogui>=0.9.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "psutil>=5.9.0",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.2.0",
]

[project.optional-dependencies]
audio = ["pyaudio>=0.2.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["tts", "service"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = false
